server/adm/css/style.css
/* ... */
@media (min-width: 1201px) {
#sidebar-left {  z-index:100;
   position: fixed;

  
   height:auto;
    bottom:0;
    top:0;
  
    right:0;
    margin-top:52px;
 

   margin-bottom:31px;

 overflow: auto;
 border-right: 1px solid #DDDDDD;
  background: #F2F2F2 /*url(../img/devoops_pattern_b10.png)*/ 0 0 repeat;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
  

    position: fixed;
    left: 250px;
  
  
    margin-left: -250px;
    overflow-y: auto; }	
  #sidebar-left.col-sm-2 {
    opacity: 1;
    width: 280px;
    padding: 0 15px;
  }
  #content {
margin-left:280px;}
  .sidebar-show #sidebar-left.col-sm-2 {
    opacity: 0;
    width:0;
    padding:0;
  }
  .sidebar-show #content.col-sm-10 {
    opacity: 1;
    width:100%;
  }
  .page-404 .form-inline {
    width: 60%;
  }
}

  .nav.main-menu > li > a, .nav.msg-menu > li > a {
    text-align: left;
  }
  .nav.main-menu > li > a > i, .nav.msg-menu > li > a > i {
    font-size:14px;
    width: 20px;
    display: inline-block;
	  margin-top: -3px;
  }
.nav.main-menu > li > a > .fa-chevron-left {   margin-top: 3px;}
  .main-menu .dropdown-menu {
    position: relative;
    z-index: inherit;
    left:0;
    margin: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
/*    background:rgba(255, 255, 255, 0.2);*/
    visibility: visible;
  }
  .main-menu .dropdown-menu > li > a {
    -webkit-border-radius: 0 !important;
    -moz-border-radius: 0 !important;
    border-radius: 0 !important;
  }
  .page-404 .form-inline {
    width: 40%;
  }

@media (max-width: 767px) {
  #main {
    /*margin-top: 100px;*/
  }
  #messages-menu {
    top:140px;
  }
  .page-404 .form-inline {
    width: 100%;
  }
  #dashboard_links .nav {
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
  }
  #dashboard_links .nav-stacked > li {
    float:left;
  }
  #dashboard_links .nav-pills > li > a {
    padding:15px;
  }
  #dashboard_links .nav-pills > li.active > a:before {
    bottom: 0;
    left: 50%;
    margin-left: -9px;
  }
  
  #modalbox_ad .form-group{
      margin-top: 0;
      margin-bottom: 0;
  }
}
@media (max-width: 620px) {
  .user-mini {
    display: none;
  }
}
@media (max-width: 400px) {
  .panel-menu a.account {
    padding: 5px 0px 5px 0;
  }
  .avatar {
    margin: 0;
  }
  .panel-menu i.pull-right {
    margin-left: 0;
  }
  .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
    background: none;
  }
  #dashboard_links .nav-stacked > li {
    float:none;
  }
  #dashboard_links .nav-pills > li.active > a:before {
    display: none;
  }
}

table .dropdown-toggle  i:hover {background-color:#FFCD1C !important;}
table .dropdown-toggle  i {padding:5px !important;}


table.dataTable tbody th, table.dataTable tbody td {padding:5px 0px 5px 10px !important;}
table.dataTable thead th,
table.dataTable thead td {
  padding: 4px 10px 4px 10px !important;
  border-bottom: 1px solid #FFF !important;
}
table.dataTable tfoot th,
table.dataTable tfoot td {
  padding: 10px 18px 6px 18px;
   border-bottom: 1px solid #E3E3E3 !important;
}
footer {width:100%; color:#000; background-color:#f2f2f2; border-top:1px solid #DDDDDD; position:fixed; height:30px; text-align:center; z-index:21;right:0;bottom:0px;padding-top:6px;font-size:13px;}
footer .text { margin:0 auto; min-width:640px;}
footer a {color:#000; margin-right:5px;margin-left:5px;}
.no-footer {border-bottom: 1px solid #E3E3E3 !important;}
table.dataTable thead th,
table.dataTable thead th {
  color: #5F5F5F !important;     height: 34px;}

#files_container .dataTables_wrapper {
    min-height: 100px;
    position: relative;
    z-index: 300;
}

#files_container .dataTables_wrapper > .row-fluid:first-of-type{
    display: block;
    min-height: 30px;
    overflow-x: auto;
    overflow-y: hidden;
    position: relative;
}

#files_container .dataTables_wrapper > .row-fluid > .span6 {
    float: left;
    min-width: 50%;
}

#files_container .dataTables_wrapper .dataTables_filter label{
    margin-top: 5px;
}

.bord { border-bottom:2px solid #2e2e2e;}
.select2-results .select2-no-results, .select2-results .select2-searching, .select2-results .select2-selection-limit { background-color: #FFCD1C !important; }

.select2-container-multi .select2-choices .select2-search-choice { 
background-clip: padding-box;
border: 1px solid #fff !important;
border-radius: 5px !important;
color: #000000;
cursor: default;
line-height: 13px;
margin: 3px 0px 3px 5px;
padding: 3px 5px 3px 18px;
position: relative;
}

.select2-drop-active  { 
border-bottom: 1px solid #D3D3D3 !important;
border-left: 1px solid #D3D3D3 !important;
border-right: 1px solid #D3D3D3 !important;
border-top: medium none currentColor;
}

.select2-container-multi .select2-search-choice-close { left: 3px !important; top:3px !important; background-color: #FFCD1C !important; border-radius:5px; padding-left:13px;}

#custom-search-input {
        margin:0;
        margin-top: 10px;
        padding: 0;
    }
 
    #custom-search-input .search-query {
        padding-right: 3px;
        padding-right: 4px \9;
        padding-left: 3px;
        padding-left: 4px \9;
        /* IE7-8 doesn't have border-radius, so don't indent the padding */
 
        margin-bottom: 0;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
    }
 
    #custom-search-input button {
        border: 0;
        background: none;
        /** belows styles are working good */
        padding: 2px 5px;
        margin-top: 2px;
        position: relative;
        left: -28px;
        /* IE7-8 doesn't have border-radius, so don't indent the padding */
        margin-bottom: 0;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
        color:#D9230F;
    }
 
    .search-query:focus + button {
        z-index: 3;   
    }

th[data-filter='operations']{
    visibility: hidden;
}
/* ... */

